# cpp-png-decoder

./: .clang-format  CMakeLists.txt  build.cmake  libpng_wrappers.h  readme.md  test.cpp  test_commons.hpp
includes/: constants.h  crc_validation.h  deflate.h  filters.h  image.h  png_decoder.h  readers.h  reverse_filter.h
src/: crc_validation.cpp  deflate.cpp  filters.cpp  png_decoder.cpp  readers.cpp  reverse_filter.cpp
